fix: header and educationItemIcon alignment

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1110,9 +1110,6 @@ footer .links svg:hover {
 @media only screen and (max-width: 580px) {
   section h3 {
     font-size: 1.5em;
-    text-wrap: normal;
-    word-wrap: break-word;
-    overflow-wrap: break-word;
   }
 
   .educationItem {
@@ -1131,6 +1128,7 @@ footer .links svg:hover {
     -ms-flex-item-align: center;
     -ms-grid-row-align: center;
     align-self: center;
+    margin: auto;
     margin-top: 75px;
     margin-bottom: 25px;
   }
@@ -1157,17 +1155,18 @@ footer .links svg:hover {
 /*-------------------*/
 @media only screen and (max-width: 320px) {
   header {
-    height: auto;
-    padding-top: 75px;
-    padding-bottom: 25px;
   }
 
   header h1 {
-    font-size: 1.5em;
+    font-size: 1.25em;
   }
 
   header h2 {
-    font-size: 1em;
+    font-size: .75em;
+  }
+
+  header h3 {
+    font-size: .75em;
   }
 
   #headerLinks {
@@ -1181,16 +1180,16 @@ footer .links svg:hover {
   }
 
   #headerLinks svg {
-    width: 40px;
+    width: 30px;
   }
 
   #headerContainer {
   }
 
   header #headerAvatar {
-    width: 200px;
-    height: 200px;
-    background-size: 215px 215px;
+    width: 150px;
+    height: 150px;
+    background-size: 165px 165px;
   }
 
   .skillList {
